--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-album-header [(nowPlaying)]="currentPlayingSong"></app-album-header>
-<div class="album-info">
-  <div class="album-art" *ngFor="let album of album">
+<div class="album-info" *ngFor="let album of album">
+  <div class="album-art" >
     <h2>{{ album.artist }} - {{ album.title }}</h2>
     <img [src]="album.coverUrl">
   </div>
