Corrected Input Logic.

--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -1,4 +1,4 @@
 <div class="play-button">
-  <app-play-button (selected)="emitSongSelection()"></app-play-button>
+  <app-play-button></app-play-button>
   {{name}}
 </div>
